--- a/docker/release/docker-compose.yml
+++ b/docker/release/docker-compose.yml
@@ -19,7 +19,7 @@ app:
     - "--die-on-term"
 
 test:
-  image: jmenga/todobackend-specs
+  image: terrymoon999/todobackend-specs
   links:
     - nginx
   environment:
@@ -56,7 +56,7 @@ db:
     MYSQL_ROOT_PASSWORD: password
 
 agent:
-  image: jmenga/ansible
+  image: terrymoon999/ansible
   links:
     - db
   environment:
