--- a/docker/release/Dockerfile.nginx
+++ b/docker/release/Dockerfile.nginx
@@ -1,5 +1,5 @@
 FROM nginx
-MAINTAINER Justin Menga <justin.menga@gmail.com>
+MAINTAINER Alex I <blablabla@example.com>
  
 # Copy todobackend nginx configuration file
 COPY todobackend.conf /etc/nginx/conf.d/todobackend.conf
